selfhost/test/typechecker/indexing/tuple_error_type_mismatch.out
Error at %FILE_NAME%:3:15
Type mismatch
  |  val a: Int = t[1]
                   ^
Expected: Int
but instead found: String
