selfhost/test/typechecker/indexing/tuple_error_type_mismatch.abra
val t = (1, "two", [3])

val a: Int = t[1]